<resources>
    <string name="app_name">CoafuriLoredana</string>
    <string name="descriere">Coafuri, impletituri, modele inedite care să se potrivească stilului tău, fie că ieşi la o plimbare sau mergi la o petrecere fancy.</string>
    <string name="adresa">str. Unirii, bl.E1, sc.A, loc. Negresti</string>
    <string name="telefon">(+40) 742 943035</string>
    <string name="facebook">https://www.facebook.com/CoafuriLoredana/</string>
    <string name="facebook_desc">Viziteaza pagina de facebook</string>
    <string name="tel_desc">Suna acum</string>
    <string name="adr_desc">Obtine indicatii</string>
    <string name="btn_programare">Obtine programare</string>
    <string name="banner_desc">Banner aplicatie</string>
</resources>
