<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.coafuriloredana.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                style="@style/banner"
                android:contentDescription="@string/banner_desc" />

            <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/desc_widget"
                style="@style/descriptionCard"
                app:cardCornerRadius="@dimen/description_card_corner_radius"
                app:cardElevation="@dimen/description_card_elevation"
                app:cardUseCompatPadding="true">

                <TextView
                    style="@style/descriptionText"
                    android:text="@string/descriere" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <TextView
            style="@style/contactDetails"
            android:drawableLeft="@drawable/placeholder"
            android:drawableStart="@drawable/placeholder"
            android:onClick="navigatemaps"
            android:text="@string/adresa" />

        <TextView
            style="@style/secondaryText"
            android:text="@string/adr_desc" />

        <View style="@style/divider" />

        <TextView
            style="@style/contactDetails"
            android:autoLink="phone"
            android:drawableLeft="@drawable/phone_button"
            android:drawableStart="@drawable/phone_button"
            android:text="@string/telefon"
            android:textColorLink="@color/primaryText" />

        <TextView
            style="@style/secondaryText"
            android:text="@string/tel_desc" />

        <View style="@style/divider" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/contactDetails"
                android:drawableLeft="@drawable/facebook_button"
                android:drawableStart="@drawable/facebook_button"
                android:onClick="lunchFacebook"
                android:text="@string/facebook" />
        </ScrollView>

        <TextView
            style="@style/secondaryText"
            android:text="@string/facebook_desc" />

    </LinearLayout>
</ScrollView>